# kc2re-agent

./: Dockerfile  pyproject.toml  serve.py
.github/workflows/: docker-publish.yml
kc2re_agent/: app.py  cloud_init_templates.py  lxd_types.py  messages.py  simplestreams.py
